[gd_scene load_steps=29 format=3 uid="uid://o3omt8mgs28d"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_3bwh3"]
[ext_resource type="PackedScene" uid="uid://bvbjao5jxixwa" path="res://scenes/dialogue_controller.tscn" id="2_8x3au"]
[ext_resource type="Script" path="res://scripts/shop_manager.gd" id="4_8kavy"]
[ext_resource type="PackedScene" uid="uid://nwb4n4gtqpwn" path="res://scenes/shop_button.tscn" id="5_obpb6"]
[ext_resource type="Script" path="res://scripts/start_day_button.gd" id="6_sklra"]
[ext_resource type="Script" path="res://scripts/customer_manager.gd" id="7_cb75x"]
[ext_resource type="Texture2D" uid="uid://dr7jpc6sf63sx" path="res://art/other/CounterNoBG.png" id="9_u5bae"]
[ext_resource type="Script" path="res://scripts/wave_manager.gd" id="11_0keo5"]
[ext_resource type="PackedScene" uid="uid://bbqx7nohubue7" path="res://scenes/trash_button.tscn" id="12_vp5wo"]
[ext_resource type="PackedScene" uid="uid://d2eul6xmbt8yw" path="res://scenes/blender_button.tscn" id="13_v2x00"]
[ext_resource type="PackedScene" uid="uid://bsm5cve406wkh" path="res://scenes/chopping_board_button.tscn" id="14_fhjbi"]
[ext_resource type="PackedScene" uid="uid://e8c57x3pn5ph" path="res://scenes/shelf_button.tscn" id="15_poo50"]
[ext_resource type="PackedScene" uid="uid://c2oc4k6cal0bp" path="res://scenes/grab_button.tscn" id="16_hjq24"]
[ext_resource type="Texture2D" uid="uid://dul4b3nn6s6qy" path="res://final_art/Basket_fulla_apples.png" id="17_7jtcl"]
[ext_resource type="Texture2D" uid="uid://d1veoh23rcodj" path="res://art/fruit/Apple.png" id="18_2rngc"]
[ext_resource type="Texture2D" uid="uid://dnq7c6kvmrj0g" path="res://final_art/Basket_fulla_oranges.png" id="19_04xlm"]
[ext_resource type="Texture2D" uid="uid://bkcgipbf7inyf" path="res://art/fruit/Orange.png" id="20_h6dmv"]
[ext_resource type="Texture2D" uid="uid://uwlq7p86wwyq" path="res://final_art/basket_fulla_bananas.png" id="21_quays"]
[ext_resource type="Texture2D" uid="uid://ci04814knhh8k" path="res://art/fruit/Banana.png" id="22_qqocb"]
[ext_resource type="Texture2D" uid="uid://bd0h02n4b7a3w" path="res://final_art/Basket_fulla_blueberries.png" id="23_lvhol"]
[ext_resource type="Texture2D" uid="uid://c5juappyqcdik" path="res://art/fruit/Blueberries.png" id="24_1484l"]
[ext_resource type="Texture2D" uid="uid://bbl6s7btrx3sw" path="res://final_art/Basket_fulla_grapes.png" id="25_2xoq5"]
[ext_resource type="Texture2D" uid="uid://2v4o3pbq7le5" path="res://art/fruit/Plum.png" id="26_4erpk"]
[ext_resource type="Script" path="res://scripts/gui.gd" id="27_nyrnw"]
[ext_resource type="Texture2D" uid="uid://beg37axtrn03c" path="res://art/other/Heart.png" id="28_thnfy"]
[ext_resource type="Script" path="res://scripts/hover_button.gd" id="29_fw674"]
[ext_resource type="Texture2D" uid="uid://bjwswrasjh5mp" path="res://art/other/Fruit Key.png" id="30_56up4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o0aa8"]

[node name="CircleTwo" type="Node2D"]
script = ExtResource("1_3bwh3")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="DialogueController" parent="." instance=ExtResource("2_8x3au")]

[node name="ShopManager" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("4_8kavy")

[node name="Background" type="Panel" parent="ShopManager"]
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = -180.0

[node name="ShopButton" parent="ShopManager/Background" instance=ExtResource("5_obpb6")]
layout_mode = 0
offset_left = 592.0
offset_top = 89.0
offset_right = 728.0
offset_bottom = 225.0

[node name="ShopButton2" parent="ShopManager/Background" instance=ExtResource("5_obpb6")]
layout_mode = 0
offset_left = 792.0
offset_top = 89.0
offset_right = 928.0
offset_bottom = 225.0

[node name="ShopButton3" parent="ShopManager/Background" instance=ExtResource("5_obpb6")]
layout_mode = 0
offset_left = 992.0
offset_top = 89.0
offset_right = 1128.0
offset_bottom = 225.0

[node name="ShopButton4" parent="ShopManager/Background" instance=ExtResource("5_obpb6")]
layout_mode = 0
offset_left = 1192.0
offset_top = 89.0
offset_right = 1328.0
offset_bottom = 225.0

[node name="ShopLabel" type="Label" parent="ShopManager/Background"]
layout_mode = 0
offset_left = 940.0
offset_top = 4.0
offset_right = 980.0
offset_bottom = 27.0
text = "Shop"

[node name="StartDayButton" type="Button" parent="ShopManager/Background"]
layout_mode = 0
offset_top = 284.0
offset_right = 136.0
offset_bottom = 360.0
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_o0aa8")
text = "Start Next Wave"
autowrap_mode = 1
script = ExtResource("6_sklra")

[node name="CustomerManager" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(1040, -230)
script = ExtResource("7_cb75x")

[node name="CustomerTimer" type="Timer" parent="CustomerManager"]
wait_time = 10.0
one_shot = true

[node name="BrownBackground" type="TextureRect" parent="."]
visible = false
offset_left = 1199.0
offset_top = 4597.0
offset_right = 2351.0
offset_bottom = 6434.0
rotation = 3.14159
scale = Vector2(2.16, 2.6)
texture = ExtResource("9_u5bae")

[node name="WaveManager" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("11_0keo5")
num_days = 3

[node name="TrashButton" parent="." instance=ExtResource("12_vp5wo")]
offset_left = -960.0
offset_top = 396.0
offset_right = -816.0
offset_bottom = 540.0

[node name="TrashButton2" parent="." instance=ExtResource("12_vp5wo")]
offset_left = 816.0
offset_top = 396.0
offset_right = 960.0
offset_bottom = 540.0

[node name="ApplianceHBox" type="HBoxContainer" parent="."]
offset_left = -832.0
offset_top = -20.0
offset_right = 832.0
offset_bottom = 348.0
theme_override_constants/separation = 160
alignment = 1

[node name="ApplianceGrid1" type="GridContainer" parent="ApplianceHBox"]
layout_direction = 3
layout_mode = 2
theme_override_constants/h_separation = 160
theme_override_constants/v_separation = 80
columns = 2

[node name="BlenderButton" parent="ApplianceHBox/ApplianceGrid1" instance=ExtResource("13_v2x00")]
layout_mode = 2

[node name="BlenderButton2" parent="ApplianceHBox/ApplianceGrid1" instance=ExtResource("13_v2x00")]
visible = false
layout_mode = 2
index = 1

[node name="BlenderButton3" parent="ApplianceHBox/ApplianceGrid1" instance=ExtResource("13_v2x00")]
visible = false
layout_mode = 2
index = 2

[node name="BlenderButton4" parent="ApplianceHBox/ApplianceGrid1" instance=ExtResource("13_v2x00")]
visible = false
layout_mode = 2
index = 3

[node name="ApplianceGrid2" type="GridContainer" parent="ApplianceHBox"]
layout_direction = 2
layout_mode = 2
theme_override_constants/h_separation = 160
theme_override_constants/v_separation = 80
columns = 2

[node name="ChoppingBoardButton2" parent="ApplianceHBox/ApplianceGrid2" instance=ExtResource("14_fhjbi")]
layout_mode = 2

[node name="ChoppingBoardButton3" parent="ApplianceHBox/ApplianceGrid2" instance=ExtResource("14_fhjbi")]
visible = false
layout_mode = 2
index = 1

[node name="ChoppingBoardButton4" parent="ApplianceHBox/ApplianceGrid2" instance=ExtResource("14_fhjbi")]
visible = false
layout_mode = 2
index = 2

[node name="ChoppingBoardButton5" parent="ApplianceHBox/ApplianceGrid2" instance=ExtResource("14_fhjbi")]
visible = false
layout_mode = 2
index = 3

[node name="ApplianceGrid3" type="GridContainer" parent="ApplianceHBox"]
layout_direction = 2
layout_mode = 2
theme_override_constants/h_separation = 160
theme_override_constants/v_separation = 160
columns = 2

[node name="ShelfButton" parent="ApplianceHBox/ApplianceGrid3" instance=ExtResource("15_poo50")]
layout_mode = 2

[node name="ShelfButton2" parent="ApplianceHBox/ApplianceGrid3" instance=ExtResource("15_poo50")]
visible = false
layout_mode = 2

[node name="ShelfButton3" parent="ApplianceHBox/ApplianceGrid3" instance=ExtResource("15_poo50")]
visible = false
layout_mode = 2

[node name="ShelfButton4" parent="ApplianceHBox/ApplianceGrid3" instance=ExtResource("15_poo50")]
visible = false
layout_mode = 2

[node name="ShelfButton" parent="." instance=ExtResource("15_poo50")]
visible = false
offset_left = 569.0
offset_top = 38.0
offset_right = 713.0
offset_bottom = 182.0
icon_alignment = 1

[node name="FruitHBox" type="HBoxContainer" parent="."]
offset_left = -857.0
offset_top = 396.0
offset_right = 857.0
offset_bottom = 540.0
theme_override_constants/separation = 80
alignment = 1

[node name="AppleButton" parent="FruitHBox" instance=ExtResource("16_hjq24")]
layout_mode = 2
texture_normal = ExtResource("17_7jtcl")
stretch_mode = 5
fruit = 1
grab_type = 1

[node name="GridContainer" type="GridContainer" parent="FruitHBox/AppleButton"]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 20.0
offset_right = 48.0
offset_bottom = 52.0
columns = 3

[node name="TextureRect" type="TextureRect" parent="FruitHBox/AppleButton/GridContainer"]
layout_mode = 2
texture = ExtResource("18_2rngc")

[node name="TextureRect2" type="TextureRect" parent="FruitHBox/AppleButton/GridContainer"]
layout_mode = 2
texture = ExtResource("18_2rngc")

[node name="TextureRect3" type="TextureRect" parent="FruitHBox/AppleButton/GridContainer"]
layout_mode = 2
texture = ExtResource("18_2rngc")

[node name="OrangeButton" parent="FruitHBox" instance=ExtResource("16_hjq24")]
layout_mode = 2
texture_normal = ExtResource("19_04xlm")
stretch_mode = 5
fruit = 2
grab_type = 1

[node name="GridContainer" type="GridContainer" parent="FruitHBox/OrangeButton"]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 20.0
offset_right = 48.0
offset_bottom = 52.0
columns = 3

[node name="TextureRect" type="TextureRect" parent="FruitHBox/OrangeButton/GridContainer"]
layout_mode = 2
texture = ExtResource("20_h6dmv")

[node name="TextureRect2" type="TextureRect" parent="FruitHBox/OrangeButton/GridContainer"]
layout_mode = 2
texture = ExtResource("20_h6dmv")

[node name="TextureRect3" type="TextureRect" parent="FruitHBox/OrangeButton/GridContainer"]
layout_mode = 2
texture = ExtResource("20_h6dmv")

[node name="BananaButton" parent="FruitHBox" instance=ExtResource("16_hjq24")]
layout_mode = 2
texture_normal = ExtResource("21_quays")
stretch_mode = 5
fruit = 3
grab_type = 1

[node name="GridContainer" type="GridContainer" parent="FruitHBox/BananaButton"]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 20.0
offset_right = 48.0
offset_bottom = 52.0
columns = 3

[node name="TextureRect" type="TextureRect" parent="FruitHBox/BananaButton/GridContainer"]
layout_mode = 2
texture = ExtResource("22_qqocb")

[node name="TextureRect2" type="TextureRect" parent="FruitHBox/BananaButton/GridContainer"]
layout_mode = 2
texture = ExtResource("22_qqocb")

[node name="TextureRect3" type="TextureRect" parent="FruitHBox/BananaButton/GridContainer"]
layout_mode = 2
texture = ExtResource("22_qqocb")

[node name="BlueberriesButton" parent="FruitHBox" instance=ExtResource("16_hjq24")]
layout_mode = 2
texture_normal = ExtResource("23_lvhol")
stretch_mode = 5
fruit = 4
grab_type = 1

[node name="GridContainer" type="GridContainer" parent="FruitHBox/BlueberriesButton"]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 20.0
offset_right = 48.0
offset_bottom = 52.0
columns = 3

[node name="TextureRect" type="TextureRect" parent="FruitHBox/BlueberriesButton/GridContainer"]
layout_mode = 2
texture = ExtResource("24_1484l")

[node name="TextureRect2" type="TextureRect" parent="FruitHBox/BlueberriesButton/GridContainer"]
layout_mode = 2
texture = ExtResource("24_1484l")

[node name="TextureRect3" type="TextureRect" parent="FruitHBox/BlueberriesButton/GridContainer"]
layout_mode = 2
texture = ExtResource("24_1484l")

[node name="PlumButton" parent="FruitHBox" instance=ExtResource("16_hjq24")]
layout_mode = 2
texture_normal = ExtResource("25_2xoq5")
stretch_mode = 5
fruit = 5
grab_type = 1

[node name="GridContainer" type="GridContainer" parent="FruitHBox/PlumButton"]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 20.0
offset_right = 48.0
offset_bottom = 52.0
columns = 3

[node name="TextureRect" type="TextureRect" parent="FruitHBox/PlumButton/GridContainer"]
layout_mode = 2
texture = ExtResource("26_4erpk")

[node name="TextureRect2" type="TextureRect" parent="FruitHBox/PlumButton/GridContainer"]
layout_mode = 2
texture = ExtResource("26_4erpk")

[node name="TextureRect3" type="TextureRect" parent="FruitHBox/PlumButton/GridContainer"]
layout_mode = 2
texture = ExtResource("26_4erpk")

[node name="AppleButton2" parent="FruitHBox" instance=ExtResource("16_hjq24")]
visible = false
layout_mode = 2
texture_normal = ExtResource("17_7jtcl")
stretch_mode = 5
fruit = 1
grab_type = 1

[node name="GridContainer" type="GridContainer" parent="FruitHBox/AppleButton2"]
visible = false
layout_mode = 0
offset_left = 16.0
offset_top = 20.0
offset_right = 48.0
offset_bottom = 52.0
columns = 3

[node name="TextureRect" type="TextureRect" parent="FruitHBox/AppleButton2/GridContainer"]
layout_mode = 2
texture = ExtResource("18_2rngc")

[node name="TextureRect2" type="TextureRect" parent="FruitHBox/AppleButton2/GridContainer"]
layout_mode = 2
texture = ExtResource("18_2rngc")

[node name="TextureRect3" type="TextureRect" parent="FruitHBox/AppleButton2/GridContainer"]
layout_mode = 2
texture = ExtResource("18_2rngc")

[node name="GUI" type="Panel" parent="."]
offset_left = -960.0
offset_top = -540.0
offset_right = -824.0
offset_bottom = -442.0
script = ExtResource("27_nyrnw")

[node name="Heart1" type="TextureRect" parent="GUI"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 44.0
offset_bottom = 44.0
texture = ExtResource("28_thnfy")

[node name="Heart2" type="TextureRect" parent="GUI"]
layout_mode = 0
offset_left = 48.0
offset_top = 4.0
offset_right = 88.0
offset_bottom = 44.0
texture = ExtResource("28_thnfy")

[node name="Heart3" type="TextureRect" parent="GUI"]
layout_mode = 0
offset_left = 92.0
offset_top = 4.0
offset_right = 132.0
offset_bottom = 44.0
texture = ExtResource("28_thnfy")

[node name="Day" type="Label" parent="GUI"]
layout_mode = 0
offset_left = 4.0
offset_top = 48.0
offset_right = 132.0
offset_bottom = 71.0
text = "Day: #"

[node name="Money" type="Label" parent="GUI"]
layout_mode = 0
offset_left = 4.0
offset_top = 71.0
offset_right = 132.0
offset_bottom = 94.0
text = "Money: $"

[node name="HoverButton" type="Button" parent="." node_paths=PackedStringArray("child")]
offset_left = -914.0
offset_top = -79.0
offset_right = -872.0
offset_bottom = -37.0
theme_override_font_sizes/font_size = 24
text = "?"
script = ExtResource("29_fw674")
child = NodePath("FruitGuide")

[node name="FruitGuide" type="TextureRect" parent="HoverButton"]
visible = false
layout_mode = 0
offset_left = 59.0
offset_right = 155.0
offset_bottom = 192.0
texture = ExtResource("30_56up4")

[connection signal="button_up" from="ShopManager/Background/StartDayButton" to="ShopManager/Background/StartDayButton" method="_on_button_up"]
[connection signal="timeout" from="CustomerManager/CustomerTimer" to="CustomerManager" method="_on_customer_timer_timeout"]
[connection signal="mouse_entered" from="TrashButton" to="TrashButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TrashButton" to="TrashButton" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="TrashButton2" to="TrashButton2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TrashButton2" to="TrashButton2" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="HoverButton" to="HoverButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="HoverButton" to="HoverButton" method="_on_mouse_exited"]
